Add streaming Hibernate find.many providers